--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hofplein 19</title>
+        <title>Hofplein 19 | Rotterdam</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="app.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,34 +12,62 @@
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
         <link rel="icon" href="img/favion.png" type="image/vnd.microsoft.icon">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <!-- NAVIGATION -->
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/hp-logo.svg" class="main-logo" alt="hofplein logo">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+
+            <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">The Building</a>
                 </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
             </ul>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Book Viewing
-    </button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Book Viewing
+            </button>
 
-    </div>
+        </div>
     </nav>
+
+
+    <section class="hero">
+        <div class="video-container">
+            <h1>This is a title</h1>
+            <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
+            <video autoplay loop id="video-background" muted plays-inline>
+                <source src="img/test.mp4" type="video/mp4">
+            </video>
+        </div>
+    </section>
+    
+    <section class="test">
+        <div>
+            This is a test scroll
+        </div>
+    </section>
+
+
+
+
+
 
 
 
