hero title styling and first title section added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
@@ -49,8 +49,12 @@
 
 
     <section class="hero">
+        <div class="hero-title">
+            <p><span class="title-serif">Hofplein 19</span></p>
+            <h1>Where the city gets going</h1>
+        </div>
+
         <div class="video-container">
-            <h1>This is a title</h1>
             <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
             <video autoplay loop id="video-background" muted plays-inline>
                 <source src="img/test.mp4" type="video/mp4">
@@ -58,10 +62,10 @@
         </div>
     </section>
     
-    <section class="test">
-        <div>
-            This is a test scroll
-        </div>
+    <section class="statement-title">
+        <span class="dash-top">—</span>
+        <h2>A modern icon refurblished &amp; ready for <span class="title-serif">it's next chapter.</span></h2>
+        <span class="dash-bottom">—</span>
     </section>
 
 
