added image as test and styled first 2 column section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,26 @@
         <span class="dash-bottom">—</span>
     </section>
 
+    <section class="content-block">
+        <div class="container-fluid">
+            <div class="background-color"></div>
+            <div class="row">
+                <div class="col-md">
+                    <img src="img/img-test.jpeg">
+                </div>
+                <div class="col-md">
+                    <div>
+                        <span class="dash-top">—</span>
+                        <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
+                        <span class="dash-top">—</span>
+                        <p>Some text to go inside this area here right here right blooming here.</p>
+                        <a class="btn btn-primary" href="#" role="button">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
