features icons added

--- a/index.html
+++ b/index.html
@@ -88,6 +88,45 @@
         </div>
     </section>
 
+    <section class="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg">
+                    <p>Fully customizable</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
