added alternate content section

--- a/index.html
+++ b/index.html
@@ -127,6 +127,33 @@
         </div>
     </section>
 
+    <section class="create-layout">
+        <h2>Create <span class="title-serif">any</span> layout</h2>
+        <video autoplay loop class="block-level--video" muted plays-inline>
+            <source src="img/test.mp4" type="video/mp4">
+        </video>
+    </section>
+
+    <section class="content-block--alt">
+        <div class="container-fluid">
+            <div class="background-color--alt"></div>
+            <div class="row">
+                <div class="col-md">
+                    <img src="img/img-test.jpeg">
+                </div>
+                <div class="col-md order-first">
+                    <div>
+                        <span class="dash-top">—</span>
+                        <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
+                        <span class="dash-top">—</span>
+                        <p>Some text to go inside this area here right here right blooming here.</p>
+                        <a class="btn btn-secondary" href="#" role="button">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
