--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
         <div class="video-container">
             <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
             <video autoplay loop id="video-background" muted plays-inline>
-                <source src="img/test.mp4" type="video/mp4">
+                <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
     </section>
     
     <section class="statement-title">
-        <span class="dash-top">—</span>
+        <span class="dash-top fadein" >—</span>
         <h2>A modern icon refurblished &amp; ready for <span class="title-serif">it's next chapter.</span></h2>
-        <span class="dash-bottom">—</span>
+        <span class="dash-bottom fadein">—</span>
     </section>
 
     <section class="content-block">
@@ -73,13 +73,13 @@
             <div class="background-color"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/img-test.jpeg">
+                    <img src="img/img-test.jpeg" class="fadein">
                 </div>
                 <div class="col-md">
                     <div>
-                        <span class="dash-top">—</span>
+                        <span class="dash-top fadein">—</span>
                         <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
-                        <span class="dash-top">—</span>
+                        <span class="dash-bottom fadein">—</span>
                         <p>Some text to go inside this area here right here right blooming here.</p>
                         <a class="btn btn-primary" href="#" role="button">Learn more</a>
                     </div>
@@ -92,35 +92,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg">
+                    <img src="img/star.svg" class="fadein">
                     <p>Fully customizable</p>
                 </div>
             </div>
@@ -139,13 +139,13 @@
             <div class="background-color--alt"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/img-test.jpeg">
+                    <img src="img/img-test.jpeg" class="fadein">
                 </div>
                 <div class="col-md order-first">
                     <div>
-                        <span class="dash-top">—</span>
+                        <span class="dash-top fadein">—</span>
                         <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
-                        <span class="dash-top">—</span>
+                        <span class="dash-top fadein">—</span>
                         <p>Some text to go inside this area here right here right blooming here.</p>
                         <a class="btn btn-secondary" href="#" role="button">Learn more</a>
                     </div>
@@ -153,6 +153,38 @@
             </div>
         </div>
     </section>
+
+
+    <section class="features">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
@@ -169,6 +201,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <script src="js/navigation.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/animation.js"></script>
 
 </body>
 
