added 2 images including the footer

--- a/index.html
+++ b/index.html
@@ -185,6 +185,30 @@
             </div>
         </section>
 
+        <section class="additional">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <img src="img/landscape-01.jpeg" class="fadein">
+                        <h3>Where corporate &amp; <span class="title-serif">creative meet</span></h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <a class="btn btn-primary" href="#" role="button">Learn more</a>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img src="img/landscape-02.jpeg" class="fadein">
+                        <h3>Space-sharing at <span class="title-serif">Spaces HP 20</span></h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <a class="btn btn-primary" href="#" role="button">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <img src="img/hp-logo-alt.svg">
+            <img src="img/up-icon.svg" class="up">
+        </footer>
+
 
 
 
