footer styling fixed position

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         </div>
     </section>
     
+
+    <main>
     <section class="statement-title">
         <span class="dash-top fadein" >—</span>
         <h2>A modern icon refurblished &amp; ready for <span class="title-serif">it's next chapter.</span></h2>
@@ -203,6 +205,7 @@
                 </div>
             </div>
         </section>
+    </main>
 
         <footer>
             <img src="img/hp-logo-alt.svg">
