serif typekit font added and navbar border bottom added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hofplein 19 | Rotterdam</title>
+        <title>Hofplein 19 | Where the city gets going</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -11,6 +11,7 @@
         <meta name="author" content="name">
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
+        <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
         <link rel="icon" href="img/favion.png" type="image/vnd.microsoft.icon">
     </head>
 
@@ -45,8 +46,7 @@
 
         </div>
     </nav>
-
-
+    <!-- HERO -->
     <section class="hero">
         <div class="hero-title">
             <p><span class="title-serif">Hofplein 19</span></p>
@@ -60,8 +60,7 @@
             </video>
         </div>
     </section>
-    
-
+    <!-- MAIN -->
     <main>
     <section class="statement-title">
         <span class="dash-top fadein" >—</span>
@@ -155,7 +154,6 @@
         </div>
     </section>
 
-
     <section class="features">
             <div class="container">
                 <div class="row">
@@ -207,21 +205,10 @@
         </section>
     </main>
 
-        <footer>
-            <img src="img/hp-logo-alt.svg">
-            <img src="img/up-icon.svg" class="up">
-        </footer>
-
-
-
-
-
-
-
-
-   
-    
-
+    <footer>
+        <img src="img/hp-logo-alt.svg">
+        <img src="img/up-icon.svg" class="up">
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
