--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- NAVIGATION -->
     <nav class="navbar fixed-top navbar-expand-sm navbar-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="img/hp-logo.svg" class="main-logo" alt="hofplein logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,14 +30,14 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">The Building</a>
+                    <a class="nav-link" href="building.html">The Building</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
             </ul>
 
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
