added history image

--- a/about.html
+++ b/about.html
@@ -47,6 +47,16 @@
         </div>
     </nav>
     <!-- HERO -->
+
+    <section class="statement-title">
+        <span class="dash-top fadein" >—</span>
+        <h2>Hofplein 19 is <span class="title-serif">one of the first height-rises</span> in Rotterdam.</h2>
+        <span class="dash-bottom fadein">—</span>
+    </section>
+
+    <div>
+        <img src="img/history-img.jpeg" alt="hofplein 19 in the 1950's">
+    </div>
     
     <!-- MAIN -->
     <main>
