added google map functionality

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
+        <img src="img/chevron-down.svg" class="scroll-icon">
     </section>
     <!-- MAIN -->
     <main>
@@ -203,6 +204,11 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
+        </section>
+        
     </main>
 
     <footer>
