contact form added

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 
     <main>
 
-    <div>
+    <div class="fadein">
         <img src="img/history-img.jpeg" alt="hofplein 19 in the 1950's">
     </div>
 
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="fadein">
             <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
                 <source src="img/test.mp4" type="video/mp4">
             </video>
