--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,46 @@
 
 
 
+<section class="contact">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h2>Contact Us</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="col-12 col-md-6">
+                <form>
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control" id="validationDefault01" placeholder="First name" required>
+                        </div>
+                        <div class="col">
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <input type="tel" id="phone" class="form-control" placeholder="Telephone" required>
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Company" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <textarea class="form-control" placeholder="Add question"></textarea>
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 
-        
+
+
+
 
 
     <section>
