--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <h2>Contact Us</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>If you'd like to arrange a viewing or have a question simply fill in the contact form and we'll get back to you as soon as possible.</p>
             </div>
             <div class="col-12 col-md-6">
                 <form>
@@ -77,10 +77,14 @@
                         </div>
                     </div>
                     <div class="row">
-                        <textarea class="form-control" placeholder="Add question"></textarea>
+                        <div class="col">
+                            <textarea class="form-control" placeholder="Add question"></textarea>
+                        </div>
                     </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                    <div class="row">
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                        </div>
                     </div>
                 </form>
             </div>
