--- a/contact.html
+++ b/contact.html
@@ -49,48 +49,74 @@
 
     <main>
 
-
-
-<section class="contact">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <h2>Contact Us</h2>
-                <p>If you'd like to arrange a viewing or have a question simply fill in the contact form and we'll get back to you as soon as possible.</p>
-            </div>
-            <div class="col-12 col-md-6">
-                <form>
-                    <div class="row">
-                        <div class="col">
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="First name" required>
+    <section class="contact">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <h2>Contact Us</h2>
+                    <p>If you'd like to arrange a viewing or have a question simply fill in the contact form and we'll get back to you as soon as possible.</p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <form>
+                        <div class="row">
+                            <div class="col">
+                                <input type="text" class="form-control" id="validationDefault01" placeholder="First name" required>
+                            </div>
+                            <div class="col">
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
+                        <div class="row">
+                            <div class="col">
+                                <input type="tel" id="phone" class="form-control" placeholder="Telephone" required>
+                            </div>
+                            <div class="col">
+                                <input type="text" class="form-control" placeholder="Company" required>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <input type="tel" id="phone" class="form-control" placeholder="Telephone" required>
+                        <div class="row">
+                            <div class="col">
+                                <textarea class="form-control" placeholder="Add question"></textarea>
+                            </div>
                         </div>
-                        <div class="col">
-                            <input type="text" class="form-control" placeholder="Company" required>
+                        <div class="row">
+                            <div class="col">
+                                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <textarea class="form-control" placeholder="Add question"></textarea>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <section class="contact-info">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/directions.svg" class="fadein">
+                    <div>
+                        <h4>Visit Us</h4>
+                        <p>Directions</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/call.svg" class="fadein">
+                    <div>
+                        <h4>Call Us</h4>
+                        <p>+31 000 000 000</p>
+                    </div>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/email.svg" class="fadein">
+                    <div>
+                        <h4>Email Us</h4>
+                        <p>info@hofplein19.nl</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
