--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hofplein 19 | About</title>
+        <title>Hofplein 19 | Contact</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <h2>Contact Us</h2>
-                    <p>If you'd like to arrange a viewing or have a question simply fill in the contact form and we'll get back to you as soon as possible.</p>
+                    <p class="mb-5">If you'd like to arrange a viewing or have a question simply fill in the contact form and we'll get back to you as soon as possible.</p>
                 </div>
                 <div class="col-12 col-md-6">
                     <form>
@@ -93,35 +93,30 @@
     <section class="contact-info">
         <div class="container">
             <div class="row">
-                <div class="col-6 col-md-4 flex">
+                <div class="col-12 col-sm-4 flex">
                     <img src="img/directions.svg" class="fadein">
                     <div>
                         <h4>Visit Us</h4>
-                        <p>Directions</p>
+                        <p><a href="#">Directions</a></p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 flex">
+                <div class="col-12 col-sm-4 flex">
                     <img src="img/call.svg" class="fadein">
                     <div>
                         <h4>Call Us</h4>
-                        <p>+31 000 000 000</p>
+                        <p><a href="tel:+31 000 000 000">+31 000 000 000</a></p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 flex">
+                <div class="col-12 col-sm-4 flex">
                     <img src="img/email.svg" class="fadein">
                     <div>
                         <h4>Email Us</h4>
-                        <p>info@hofplein19.nl</p>
+                        <p><a href="mailto:info@hofplein19.nl" target="_blank">info@hofplein19.nl</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-
-
-
 
     <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
@@ -138,7 +133,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
-    <!-- <script src="js/navigation.js"></script> -->
     <script src="js/main.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/animation.js"></script>
