changed animation js file

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <section class="create-layout">
         <h2>Create <span class="title-serif">any</span> layout</h2>
-        <video autoplay loop class="block-level--video" muted plays-inline>
+        <video autoplay loop class="block-level--video fadein" muted plays-inline>
             <source src="img/test.mp4" type="video/mp4">
         </video>
     </section>
