added building page and base styling

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="building.html">The Building</a>
+                    <a class="nav-link" href="the-building.html">The Building</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
