--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="building.html">The Building</a>
+                    <a class="nav-link" href="the-building.html">The Building</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -63,6 +63,7 @@
     </section>
     <!-- MAIN -->
     <main>
+        
     <section class="statement-title">
         <span class="dash-top fadein" >—</span>
         <h2>A modern icon refurblished &amp; ready for <span class="title-serif">it's next chapter.</span></h2>
@@ -131,7 +132,7 @@
     <section class="create-layout">
         <h2>Create <span class="title-serif">any</span> layout</h2>
         <video autoplay loop class="block-level--video fadein" muted plays-inline>
-            <source src="img/test.mp4" type="video/mp4">
+            <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
         </video>
     </section>
 
