pages styling for the building

--- a/the-building.html
+++ b/the-building.html
@@ -80,25 +80,88 @@
             </div>
             
             <div class="row diagram-info">
-                <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                <div class="col-12 col-md-4 flex">
+                    <img src="img/01-icon.svg" class="fadein">
+                    <div class="features-wrap">
+                        <h4>A rooftop terrace</h4>
+                        <p>Restaurant by Ron de Jong</p>
+                    </div>
                 </div>
-                <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                <div class="col-12 col-md-4 flex">
+                    <img src="img/02-icon.svg" class="fadein">
+                    <div class="features-wrap">
+                        <h4>Spaces</h4>
+                        <p>Shared meeting rooms &amp; lunch bar</p>
+                    </div>
                 </div>
-                <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                <div class="col-12 col-md-4 flex">
+                    <img src="img/03-icon.svg" class="fadein">
+                    <div class="features-wrap">
+                        <h4>9 Floors</h4>
+                        <p>9 floors from 1,400 sq M</p>
+                    </div>
                 </div>
-                <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                <div class="col-12 col-md-4 flex">
+                    <img src="img/04-icon.svg" class="fadein">
+                    <div class="features-wrap">
+                        <h4>Starbucks &amp; Shell station</h4>
+                        <p>Fill up at the petrol station or grab a coffee</p>
+                    </div>
                 </div>
-                <div class="col-6 col-md-4 flex">
-                    <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                <div class="col-12 col-md-4 flex">
+                    <img src="img/05-icon.svg" class="fadein">
+                    <div class="features-wrap">
+                        <h4>Deli 19</h4>
+                        <p>Lunch bar by Ron de Jong inside HP 19</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="features building">
+            <div class="container">
+
+                <div class="row">
+                        <div class="title-wrap">
+                            <span class="dash-top fadein">—</span>
+                            <h2>The buildings <span class="title-serif">features</span></h2>
+                            <span class="dash-top fadein">—</span>
+                        </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
+                    <div class="col-6 col-md-4 flex">
+                        <img src="img/star-alt.svg" class="fadein">
+                        <p>Fully customizable</p>
+                    </div>
                 </div>
             </div>
         </section>
