--- a/the-building.html
+++ b/the-building.html
@@ -75,7 +75,7 @@
 
         <section class="diagram">
 
-            <div>
+            <div class="fadein">
                 <img src="img/hp-key.jpeg">
             </div>
             
@@ -166,8 +166,63 @@
             </div>
         </section>
 
+        <section class="layout-slider">
 
-    
+            <div class="slider-title">
+                <span class="dash-top fadein">—</span>
+                <h2>Plan any <span class="title-serif">layout</span></h2>
+                <span class="dash-top fadein">—</span>
+            </div>
+
+            <div class="col-12 col-md-10 mx-auto">
+                <div id="carouselExampleControls" class="carousel slide fadein" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/slider-01.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/slider-02.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row col-12 col-md-10 mx-auto">
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg" class="fadein">
+                    <p>Meeting rooms</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg" class="fadein">
+                    <p>Open workspaces</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg" class="fadein">
+                    <p>Quiet work areas</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg" class="fadein">
+                    <p>Scrum rooms</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg" class="fadein">
+                    <p>Flex spaces</p>
+                </div>
+                <div class="col-6 col-md-4 flex">
+                    <img src="img/star.svg" class="fadein">
+                    <p>Game room</p>
+                </div>
+            </div>
+
+        </section>
 
         <section>
             <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
@@ -184,7 +239,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
-    <!-- <script src="js/navigation.js"></script> -->
+
     <script src="js/main.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/animation.js"></script>
