--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
         </div>
         <div class="fadein">
             <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
-                <source src="img/test.mp4" type="video/mp4">
+                <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
     </section>
