--- a/the-building.html
+++ b/the-building.html
@@ -195,7 +195,7 @@
                 </div>
             </div>
 
-            <div class="row col-12 col-md-10 mx-auto">
+            <div class="row col-12 col-md-10 mx-auto mt-4">
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
                     <p>Meeting rooms</p>
@@ -224,9 +224,31 @@
 
         </section>
 
-        <section>
-            <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
+        <section class="video-color--bg">
+            <div class="fadein video-container--flex">
+                <div class="title-wrap">
+                    <span class="dash-top fadein">—</span>
+                    <h2>Feel the emotion of the city <span class="title-serif">right inside the building</span></h2>
+                    <span class="dash-top fadein">—</span>
+                </div>
+                <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
+                    <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
+                </video>
+            </div>
+
+            <div class="info-card">
+                <div>
+                    <h3>Title here</h3>
+                </div>
+                <div>
+                    <p>Attention to detail was at the heart of the renovation and conscious choices were made with regard to material use and energy management which has led to a future-ready building with sustainable performances.</p>
+                </div>
+            </div>
         </section>
+
+        <!-- <section>
+            <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
+        </section> -->
         
     </main>
 
