finished the building page structure

--- a/the-building.html
+++ b/the-building.html
@@ -246,6 +246,44 @@
             </div>
         </section>
 
+        <section class="content-block--alt">
+            <div class="container-fluid">
+                <div class="background-color--alt"></div>
+                <div class="row">
+                    <div class="col-md">
+                        <img src="img/img-test.jpeg" class="fadein">
+                    </div>
+                    <div class="col-md order-first">
+                        <div>
+                            <span class="dash-top fadein">—</span>
+                            <h2>Immerse yourself in the <span class="title-serif">Creative surrounds.</span></h2>
+                            <span class="dash-top fadein">—</span>
+                            <p>Located on a dynamic crossroad of both the corporate and creative areas of Rotterdam, with everything within walking distance of the building.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-block mt-lg">
+            <div class="container-fluid">
+                <div class="background-color"></div>
+                <div class="row">
+                    <div class="col-md">
+                        <img src="img/img-test.jpeg" class="fadein">
+                    </div>
+                    <div class="col-md">
+                        <div>
+                            <span class="dash-top fadein">—</span>
+                            <h2>Find more space at <span class="title-serif">Spaces in Hofplein 20</span></h2>
+                            <span class="dash-bottom fadein">—</span>
+                            <p>You'll also have access to more meeting rooms and creative spaces in our neighbouring building at <a href="#" class="external-link">Spaces</a> in Hofplein 20 with room sizes from 6 to 400 people.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- <section>
             <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
         </section> -->
