--- a/contact.html
+++ b/contact.html
@@ -118,9 +118,9 @@
         </div>
     </section>
 
-    <section>
+    <!-- <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-    </section>
+    </section> -->
   
     </main>
 
