added images and video

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
-        <link rel="icon" href="img/favion.png" type="image/vnd.microsoft.icon">
+        <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
 
 <body>
@@ -40,9 +40,7 @@
                 </li>
             </ul>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Book Viewing
-            </button>
+            <a href="contact.html" class="btn btn-primary" role="button" aria-pressed="true">Book Viewing</a>
 
         </div>
     </nav>
@@ -118,9 +116,9 @@
         </div>
     </section>
 
-    <!-- <section>
+    <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-    </section> -->
+    </section>
   
     </main>
 
