--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
-        <link rel="icon" href="img/favion.png" type="image/vnd.microsoft.icon">
+        <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
 
 <body>
@@ -40,9 +40,7 @@
                 </li>
             </ul>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Book Viewing
-            </button>
+            <a href="contact.html" class="btn btn-primary" role="button" aria-pressed="true">Book Viewing</a>
 
         </div>
     </nav>
@@ -83,7 +81,7 @@
                         <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
                         <span class="dash-bottom fadein">—</span>
                         <p>Some text to go inside this area here right here right blooming here.</p>
-                        <a class="btn btn-primary" href="#" role="button">Learn more</a>
+                        <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -99,31 +97,31 @@
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>Additional parking space</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>Shared facilities at Spaces Hofplein 20</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>Transparent &amp; bright</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>Large floors &amp; high ceilings</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>Highest quality of finish</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>Shower &amp; changing rooms</p>
                 </div>
                 <div class="col-6 col-md-4 flex">
                     <img src="img/star.svg" class="fadein">
-                    <p>Fully customizable</p>
+                    <p>WKO system for heating &amp; cooling</p>
                 </div>
             </div>
         </div>
@@ -132,7 +130,7 @@
     <section class="create-layout">
         <h2>Create <span class="title-serif">any</span> layout</h2>
         <video autoplay loop class="block-level--video fadein" muted plays-inline>
-            <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
+            <source src="media/create-layout.mp4" type="video/mp4">
         </video>
     </section>
 
@@ -141,7 +139,7 @@
             <div class="background-color--alt"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/img-test.jpeg" class="fadein">
+                    <img src="img/creative-environment.jpeg" class="fadein">
                 </div>
                 <div class="col-md order-first">
                     <div>
@@ -149,7 +147,7 @@
                         <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
                         <span class="dash-top fadein">—</span>
                         <p>Some text to go inside this area here right here right blooming here.</p>
-                        <a class="btn btn-secondary" href="#" role="button">Learn more</a>
+                        <a class="btn btn-secondary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -161,27 +159,27 @@
                 <div class="row">
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <p>A rooftop terrace</p>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <p>9 floors from 1,400 sq M</p>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <p>Deli 19 lunchroom</p>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <p>Spaces at Hofplein 20</p>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <p>Starbucks &amp; Shell station below building</p>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <p>Public transport on the doorstep</p>
                     </div>
                 </div>
             </div>
@@ -194,21 +192,21 @@
                         <img src="img/landscape-01.jpeg" class="fadein">
                         <h3>Where corporate &amp; <span class="title-serif">creative meet</span></h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                        <a class="btn btn-primary" href="#" role="button">Learn more</a>
+                        <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="img/landscape-02.jpeg" class="fadein">
                         <h3>Space-sharing at <span class="title-serif">Spaces HP 20</span></h3>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                        <a class="btn btn-primary" href="#" role="button">Learn more</a>
+                        <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- <section>
+        <section>
             <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-        </section> -->
+        </section>
         
     </main>
 
