--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <meta name="description" content="description here">
         <meta name="keywords" content="keywords,here">
         <link rel="stylesheet" href="https://use.typekit.net/wuc1xov.css">
-        <link rel="icon" href="img/favion.png" type="image/vnd.microsoft.icon">
+        <link rel="icon" href="img/favicon.png" type="image/vnd.microsoft.icon">
     </head>
 
 <body>
@@ -40,9 +40,7 @@
                 </li>
             </ul>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Book Viewing
-            </button>
+            <a href="contact.html" class="btn btn-primary" role="button" aria-pressed="true">Book Viewing</a>
 
         </div>
     </nav>
@@ -80,7 +78,7 @@
             <div class="background-color--alt"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/img-test.jpeg" class="fadein">
+                    <img src="img/optimized-future.jpeg" class="fadein">
                 </div>
                 <div class="col-md order-first">
                     <div>
@@ -106,14 +104,14 @@
         </div>
         <div class="fadein">
             <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
-                <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
+                <source src="media/website-located-in-the-heart.mp4" type="video/mp4">
             </video>
         </div>
     </section>
 
-    <!-- <section>
+    <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-    </section> -->
+    </section>
 
     </main>
 
