added fonts and imagery plus additional styling

--- a/the-building.html
+++ b/the-building.html
@@ -249,7 +249,7 @@
                 <div class="background-color--alt"></div>
                 <div class="row">
                     <div class="col-md">
-                        <img src="img/img-test.jpeg" class="fadein">
+                        <img src="img/creative-surrounds.jpeg" class="fadein">
                     </div>
                     <div class="col-md order-first">
                         <div>
@@ -263,12 +263,12 @@
             </div>
         </section>
 
-        <section class="content-block mt-lg">
+        <section class="content-block mt-lg mb-lg">
             <div class="container-fluid">
                 <div class="background-color"></div>
                 <div class="row">
                     <div class="col-md">
-                        <img src="img/img-test.jpeg" class="fadein">
+                        <img src="img/spaces-hp20.jpeg" class="fadein">
                     </div>
                     <div class="col-md">
                         <div>
