--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="video-container">
             <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
-            <video autoplay loop id="video-background" muted plays-inline>
+            <video autoplay loop id="video-background" autobuffer muted plays-inline>
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
